src/test/deca/context/valid/objet/field_class_01.deca
// Description:
//   class in field
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

class A {
    int x;
}

class B {
    A a;
}


