src/test/deca/context/invalid/objet/type_void_field.deca
// Description:
//     Declaration d'un field de type void
//
// Resultats:
//    Error
//
// Historique:
//    cree le 01/01/2023

class A {
    protected void x;
}


